--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "tico/scanner",
+    "name": "yahooc/scanner",
     "description": "Scan Url from csv and test web site is work",
     "keywords": ["csv", "url"],
     "homepage": "http://tico.com",
